[tool.poetry]
name = "fluffybot"
version = "0.1.0"
description = ""
authors = ["lorow"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {extras = ["voice"], version = "^1.7.2"}
black = "^21.5b2"
asyncio = "^3.4.3"
peony-twitter = "^2.0.1"
protobuf = "^3.17.2"
ujson = "^4.0.2"
wikipedia = "^1.4.0"
google = "^3.0.0"
google-search = "^1.1.1"
youtube_dl = "^2021.6.6"
aioredis = "^1.3.1"
pip = "^21.1.3"
python-dotenv = "^0.18.0"
SQLAlchemy = "^1.4.20"
asyncpg = "^0.23.0"
aiomysql = "^0.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
